--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,11 @@ dependencies = []
 
 [tool.uv.workspace]
 members = ["template-*"]
+
+[dependency-groups]
+dev = ["mypy>=1.18.2", "pytest>=8.4.2"]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version_scheme = "pep440"
+version_provider = "uv"
