chore(vscode): use ruff binary in venv

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
   "python.analysis.typeEvaluation.strictSetInference": true,
   "python.terminal.activateEnvInCurrentTerminal": true,
   "python.testing.pytestEnabled": true,
+  "ruff.importStrategy": "fromEnvironment",
   "vscode-just.formatOnSave": true,
   "vscode-just.runInTerminal": true
 }
