--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,6 @@ authors = [{ name = "Tho Nguyen", email = "contact@naiwaaa.simplelogin.com" }]
 requires-python = ">=3.13,<3.14"
 dependencies = []
 
-[tool.uv.workspace]
-members = ["pyapi-*"]
-
 [dependency-groups]
 dev = [
   "ipykernel>=6.30.1",
@@ -31,6 +28,9 @@ dev = [
   "pytest-sugar>=1.1.1",
   "respx>=0.22.0",
 ]
+
+[tool.uv.workspace]
+members = ["pyapi-*"]
 
 [tool.mypy]
 exclude = [".cache/", ".venv/"]
@@ -83,7 +83,7 @@ show_column_numbers = true
 # incremental mode
 cache_dir = ".cache/mypy"
 # advanced options
-# plugins = ["pydantic.mypy"]
+plugins = ["pydantic.mypy"]
 
 [tool.pydantic-mypy]
 init_typed = true
@@ -135,7 +135,6 @@ addopts = [
 ]
 cache_dir = ".cache/pytest"
 doctest_optionflags = "NUMBER IGNORE_EXCEPTION_DETAIL"
-pythonpath = ["."]
 markers = [
   "slow: marks tests as slow",
   "network: marks tests which require network connection. Used in 3rd-party build environments that have network disabled",
@@ -148,7 +147,10 @@ asyncio_default_fixture_loop_scope = "module"
 asyncio_default_test_loop_scope = "module"
 
 [tool.coverage.run]
-include = ["*/pyapi-*/*"]
+source = [
+  "pyapi-api/src/",
+]
+omit = [".venv/*", ".cache/*", ".git/*"]
 branch = true
 data_file = ".cache/pytest/coverage"
 relative_files = true
@@ -158,8 +160,6 @@ fail_under = 0
 show_missing = true
 skip_covered = true
 exclude_also = [
-  "no cover",
-  "if TYPE_CHECKING:",
   "raise NotImplementedError",
   "if __name__ == .__main__.:",
 ]
